# Quality-Hub

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.devcontainer/: devcontainer.json  (+3 more)
src/app/api/: .coverage  .dev.env  .dockerignore  .gitattributes  .gitignore  Justfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
src/app/api/.devcontainer/: Dockerfile  devcontainer.json
src/app/api/.nginx/: nginx.conf
src/app/api/alembic/: env.py
src/app/api/alembic/versions/: 0002_team_project_mappings.py  0003_notes_workspace_scope.py  0004_ops_center_features.py  0005_ops_center_advanced_features.py
src/app/api/config/: development.json  production.json  testing.json
src/app/api/src/app/: asgi.py  config.py  main.py  views.py
src/app/api/src/app/config/: settings.py
src/app/api/src/app/core/core_api/: debug.py  healthcheck.py  render.py
src/app/api/src/app/core/core_auth/: rbac_checker.py  user.py
src/app/api/src/app/core/core_db/: async_db_session_maker.py  db_dependency.py
src/app/api/src/app/core/core_logging/: AppLogger.py  JourneyLogger.py  LogTypeAdapter.py  MyLogger.py
src/app/api/src/app/core/core_middleware/: profiler_middleware.py
src/app/api/src/app/core/security/: session_auth.py
src/app/api/tests/: conftest.py
src/app/api/tests/e2e/: test_core.py
src/app/api/tests/unit/: test_management_risk_radar.py  test_ops_center.py  test_public_registration.py  test_templates_path.py
(+179 files in other folders)
